force-app/main/default/objects/sustain_app__Asset__c/fields/Aquifer_Name__c.field-meta.xml
<CustomField>
    <fullName>Aquifer_Name__c</fullName>
    <label>Aquifer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>