force-app/main/default/objects/sustain_app__Asset__c/fields/Future_Water_Stress__c.field-meta.xml
<CustomField>
    <fullName>Future_Water_Stress__c</fullName>
    <description>Business as Usual - ws3028cl</description>
    <label>Future Water Stress (2030)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low (&lt;10%)</fullName>
            </value>
            <value>
                <fullName>Low-Medium (10-20%)</fullName>
            </value>
            <value>
                <fullName>Medium-High (20-40%)</fullName>
            </value>
            <value>
                <fullName>High (40-80%)</fullName>
            </value>
            <value>
                <fullName>Extremely High (&gt;80%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>