force-app/main/default/objects/sustain_app__Asset__c/fields/Future_Water_Stress_Value__c.field-meta.xml
<CustomField>
    <fullName>Future_Water_Stress_Value__c</fullName>
    <label>Future Water Stress Value (2030)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>