force-app/main/default/objects/sustain_app__Asset__c/fields/Major_Basin_Name__c.field-meta.xml
<CustomField>
    <fullName>Major_Basin_Name__c</fullName>
    <label>Major Basin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>