force-app/main/default/objects/sustain_app__Asset__c/fields/Minor_Basin_Name__c.field-meta.xml
<CustomField>
    <fullName>Minor_Basin_Name__c</fullName>
    <label>Minor Basin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>