force-app/main/default/objects/sustain_app__Asset__c/fields/Overall_Total_Water_Risk__c.field-meta.xml
<CustomField>
    <fullName>Overall_Total_Water_Risk__c</fullName>
    <inlineHelpText>in the WRI output: w_awr_def_tot_label</inlineHelpText>
    <label>Overall Total Water Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low (0-1)</fullName>
            </value>
            <value>
                <fullName>Low-Medium (1-2)</fullName>
            </value>
            <value>
                <fullName>Medium-High (2-3)</fullName>
            </value>
            <value>
                <fullName>High (3-4)</fullName>
            </value>
            <value>
                <fullName>Extremely High (4-5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>