force-app/main/default/objects/sustain_app__Asset__c/fields/Water_Risk_Regulatory_Reputational_Score__c.field-meta.xml
<CustomField>
    <fullName>Water_Risk_Regulatory_Reputational_Score__c</fullName>
    <inlineHelpText>w_awr_def_rrr_score</inlineHelpText>
    <label>Water Risk - Regulatory &amp; Reputation Sc</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>